--- a/Web.Statu/App_Code/SearchResults.cshtml
+++ b/Web.Statu/App_Code/SearchResults.cshtml
@@ -45,7 +45,6 @@
 @helper InsolvenceHead()
 {
     <tr>
-        <th></th>
         <th>Spisová značka</th>
         <th>Dlužníci</th>
         <th>Věritelé</th>
@@ -58,71 +57,66 @@
 
 @helper InsolvenceRow(System.Security.Principal.IPrincipal user, HttpRequestBase request, HlidacStatu.Lib.Data.Insolvence.Rizeni item, string query = "")
 {
-    <tr>
-        <td>
-            @{
-                @Util.AddBookmark(user, item)
-            }
-        </td>
-        <td style="white-space: nowrap;">
-            @if (HlidacStatu.Web.Framework.LimitedAccess.IsAuthenticatedOrSearchCrawler(request))
+<tr>
+    <td style="white-space: nowrap;">
+        @Util.NoWrapHtml(
+            Util.AddBookmark(user, item),
+            Html.Raw("&nbsp;"),
+             Util.IfExists(HlidacStatu.Web.Framework.LimitedAccess.IsAuthenticatedOrSearchCrawler(request),
+                $"<a href='{item.GetUrl(true, query)}'>{item.SpisovaZnacka}</a>",
+                $"<a href='#' data-toggle='modal' data-target='#VZInfoAnon' data-url='/Insolvence/Rizeni/{item.UrlId()}'>{item.SpisovaZnacka}</a>"
+            )
+         )
+    </td>
+    <td>
+        @if (item.Dluznici?.Count > 0)
+        {
+            foreach (var o in item.Dluznici.Take(2))
             {
-                <a href="@item.GetUrl(true,query)">@item.SpisovaZnacka</a>
+                <div>@Html.Raw(o.ToHtml())</div>
             }
-            else
+            if (item.Dluznici.Count == 3)
             {
-                <a href="#" data-toggle="modal" data-target="#VZInfoAnon" data-url="/Insolvence/Rizeni/@item.UrlId()">@item.SpisovaZnacka</a>
+                <div>@Html.Raw(item.Dluznici[2].ToHtml())</div>
             }
-        </td>
-        <td>
-            @if (item.Dluznici?.Count > 0)
+            else if (item.Dluznici.Count > 3)
             {
-                foreach (var o in item.Dluznici.Take(2))
-                {
-                    <div>@Html.Raw(o.ToHtml())</div>
-                }
-                if (item.Dluznici.Count == 3)
-                {
-                    <div>@Html.Raw(item.Dluznici[2].ToHtml())</div>
-                }
-                else if (item.Dluznici.Count > 3)
-                {
-                    <div>@Devmasters.Core.Lang.Plural.Get(item.Dluznici.Count - 2, "a jeden další dlužník", "a další {0} dlužníci", "a dalších {0} dlužníků")</div>
-                }
+                <div>@Devmasters.Core.Lang.Plural.Get(item.Dluznici.Count - 2, "a jeden další dlužník", "a další {0} dlužníci", "a dalších {0} dlužníků")</div>
             }
-        </td>
-        <td>
-            @if (item.Veritele?.Count > 0)
+        }
+    </td>
+    <td>
+        @if (item.Veritele?.Count > 0)
+        {
+            foreach (var o in item.Veritele.Take(2))
             {
-                foreach (var o in item.Veritele.Take(2))
-                {
-                    <div>@Html.Raw(o.ToHtml())</div>
-                }
-                if (item.Veritele.Count == 3)
-                {
-                    <div>@Html.Raw(item.Veritele[2].ToHtml())</div>
-                }
-                else if (item.Veritele.Count > 3)
-                {
-                    <div>@Devmasters.Core.Lang.Plural.Get(item.Veritele.Count - 2, "a jeden další věřitel", "a další {0} věřitelé", "a dalších {0} věřitelů")</div>
-                }
+                <div>@Html.Raw(o.ToHtml())</div>
             }
-        </td>
-        <td>
-            @(item.DatumZalozeni?.Date.ToString("d.MM.yyyy") ?? "Neznámé")
-        </td>
-        <td>
-            @item.PosledniZmena.Date.ToString("d.MM.yyyy")
-        </td>
+            if (item.Veritele.Count == 3)
+            {
+                <div>@Html.Raw(item.Veritele[2].ToHtml())</div>
+            }
+            else if (item.Veritele.Count > 3)
+            {
+                <div>@Devmasters.Core.Lang.Plural.Get(item.Veritele.Count - 2, "a jeden další věřitel", "a další {0} věřitelé", "a dalších {0} věřitelů")</div>
+            }
+        }
+    </td>
+    <td>
+        @(item.DatumZalozeni?.Date.ToString("d.MM.yyyy") ?? "Neznámé")
+    </td>
+    <td>
+        @item.PosledniZmena.Date.ToString("d.MM.yyyy")
+    </td>
 
-        <td>
-            <span title="@item.StavRizeniDetail()">@item.StavRizeni()</span>
-        </td>
-        <td>
-            <span>@item.SoudFullName()</span>
-        </td>
+    <td>
+        <span title="@item.StavRizeniDetail()">@item.StavRizeni()</span>
+    </td>
+    <td>
+        <span>@item.SoudFullName()</span>
+    </td>
 
-    </tr>
+</tr>
 }
 
 @helper FirmyHead(bool small = false)
@@ -157,25 +151,22 @@
 
     </tr>
 }
-@helper SmlouvyHead(System.Security.Principal.IPrincipal user, bool small = false)
+@helper SmlouvyHead(System.Security.Principal.IPrincipal user, bool small = true)
 {
-    <tr>
-        <th></th>
-        <th>&nbsp;</th>
-        <th>Smlouva podepsána</th>
-        @if (small == false)
-        {
-            <th>Smlouva zveřejněna</th>
-        }
-        <th>&nbsp;</th>
-        <th title="Publikující smluvní strana">Plátce</th>
-        <th title="Smluvní strana/y">Dodavatel/é</th>
-        <th>Popis smlouvy</th>
-        <th>Maximální hodnota<br/>smlouvy s DPH</th>
-    </tr>
+<tr>
+    <th>&nbsp;</th>
+    <th>Smlouva podepsána</th>
+    @if (small == false)
+    {
+        <th>Smlouva zveřejněna</th>
+    }
+    <th title="Publikující smluvní strana">Plátce</th>
+    <th title="Smluvní strana/y">Dodavatel/é</th>
+    <th>Maximální hodnota<br />smlouvy s DPH</th>
+</tr>
 }
 
-@helper SmlouvyRow(System.Security.Principal.IPrincipal user, HlidacStatu.Lib.Data.Smlouva rec, HlidacStatu.Lib.Searching.SmlouvaSearchResult Model, bool small = false)
+@helper SmlouvyRow(System.Security.Principal.IPrincipal user, HlidacStatu.Lib.Data.Smlouva rec, HlidacStatu.Lib.Searching.SmlouvaSearchResult Model, bool small = true)
 {
     var confLevel = rec.GetConfidenceLevel();
     string bgLevel = "", iconLevel = "";
@@ -187,84 +178,80 @@
         iconLevel = HlidacStatu.Lib.Issues.Importance.GetIcon(confLevel);
     }
 
-    <tr class="bg@(bgLevel)">
+<tr class="bg@(bgLevel) first">
+    <td>
+        @Util.NoWrapHtml( 
+            Html.Raw(iconLevel),
+            Util.AddBookmark(user, rec),
+            Html.Raw($"&nbsp;<a href='{rec.GetUrl(true,Model.Q)}'>Detail</a>")
+            )
+    </td>
+    <td>@rec.datumUzavreni.ToShortDateString()</td>
+    @if (small == false)
+    {
         <td>
-            @{
-                @Util.AddBookmark(user, rec)
+            @if (rec.platnyZaznam)
+            {
+                @rec.casZverejneni.ToShortDateString()
+            }
+            else
+            {
+                <span class="text-warning">Zneplatněná smlouva</span>
             }
         </td>
-        <td>@Html.Raw(iconLevel)</td>
-        <td>@rec.datumUzavreni.ToShortDateString()</td>
-        @if (small == false)
+    }
+    <td>
+        @if (!string.IsNullOrEmpty(rec.Platce?.ico))
         {
-            <td>
-                @if (rec.platnyZaznam)
-                {
-                    @rec.casZverejneni.ToShortDateString()
-                }
-                else
-                {
-                    <span class="text-warning">Zneplatněná smlouva</span>
-                }
-            </td>
-        }
-        @if (small == false)
-        {
-            <td><a href="@rec.GetUrl(true,Model.Q)">Detail smlouvy</a></td>
+            <a href="/Subjekt/@rec.Platce.ico">@rec.Platce.nazev</a>
         }
         else
         {
-            <td><a href="@rec.GetUrl(true,Model.Q)">Detail</a></td>
+            @(rec.Platce?.nazev)
         }
-        <td>
-            @if (!string.IsNullOrEmpty(rec.Platce?.ico))
+    </td>
+    <td>
+        @if (rec.Prijemce.Count() == 1)
+        {
+            if (!string.IsNullOrEmpty(rec.Prijemce[0].ico))
             {
-                <a href="/Subjekt/@rec.Platce.ico">@rec.Platce.nazev</a>
+                <a href="/Subjekt/@rec.Prijemce[0].ico">@rec.Prijemce[0].nazev</a>
             }
             else
             {
-                @(rec.Platce?.nazev)
+                @rec.Prijemce[0].nazev
             }
-        </td>
-        <td>
-            @if (rec.Prijemce.Count() == 1)
-            {
-                if (!string.IsNullOrEmpty(rec.Prijemce[0].ico))
+        }
+        else
+        {
+            <ol>
+                @foreach (var subj in rec.Prijemce.Take(2))
                 {
-                    <a href="/Subjekt/@rec.Prijemce[0].ico">@rec.Prijemce[0].nazev</a>
-                }
-                else
-                {
-                    @rec.Prijemce[0].nazev
-                }
-            }
-            else
-            {
-                <ol>
-                    @foreach (var subj in rec.Prijemce.Take(2))
+                    if (!string.IsNullOrEmpty(subj.ico))
                     {
-                        if (!string.IsNullOrEmpty(subj.ico))
-                        {
-                            <li><a href="/Subjekt/@subj.ico">@subj.nazev</a></li>
-                        }
-                        else
-                        {
-                            <li>@subj.nazev</li>
-                        }
+                        <li><a href="/Subjekt/@subj.ico">@subj.nazev</a></li>
                     }
-                </ol>
-                @Util.IfExists(rec.Prijemce.Count() > 2, HlidacStatu.Util.PluralForm.Get(rec.Prijemce.Count() - 2, "+{0} dodavatel;+{0} další dodavatelé;+{0} dalších dodavatelů"));
-            }
-        </td>
-        <td>
-            @Devmasters.Core.TextUtil.ShortenText(rec.predmet, 160)
-            @if (rec.GetRelevantClassification().Count() > 0)
-            {
-                    <div class="text-success"><b>Obor smlouvy</b>: @(string.Join(" / ", rec.GetRelevantClassification().Select(m=>m.ClassifTypeName())))</div>
-            }
-        </td>
-        <td>@Html.Raw(rec.NicePrice(html: true))</td>
+                    else
+                    {
+                        <li>@subj.nazev</li>
+                    }
+                }
+            </ol>
+            @Util.IfExists(rec.Prijemce.Count() > 2, HlidacStatu.Util.PluralForm.Get(rec.Prijemce.Count() - 2, "+{0} dodavatel;+{0} další dodavatelé;+{0} dalších dodavatelů"));
+        }
+    </td>
+    <td>@Html.Raw(rec.NicePrice(html: true))</td>
 
+</tr>
+<tr class="bg@(bgLevel) last">
+    <td></td><td></td>
+    <td colspan="@Util.IfExists(small,"4","5")">
+        @Devmasters.Core.TextUtil.ShortenText(rec.predmet, 200)
+        @if (rec.GetRelevantClassification().Count() > 0)
+        {
+        <span class="text-success">&nbsp;|&nbsp;<b>Obor smlouvy</b>: @(string.Join(" / ", rec.GetRelevantClassification().Select(m => m.ClassifTypeName())))</span>
+        }
+    </td>
 </tr>
 }
 @helper SmlouvyRowChyby(HlidacStatu.Lib.Data.Smlouva rec)
@@ -344,10 +331,6 @@
 @helper VZHeader(bool skipBookmark = false)
 {
     <tr>
-        @if (skipBookmark == false)
-        {
-            <th>&nbsp;</th>
-        }
         <th>Zakázka</th>
         <th>Poslední změna</th>
         <th>Lhůta pro nabídky</th>
@@ -361,130 +344,124 @@
 
 @helper VZRow(System.Security.Principal.IPrincipal user, HttpRequestBase req, HlidacStatu.Lib.Data.VZ.VerejnaZakazka item, bool skipBookmark = false)
 {
-    <tr>
+<tr>
+    <td style="white-space: nowrap;">
         @if (skipBookmark == false)
         {
-            <td>
-                @{
-                    @Util.AddBookmark(user, item)
-                }
-            </td>
+            @Util.AddBookmark(user, item)
         }
-        <td style="white-space: nowrap;">
-            @if (HlidacStatu.Web.Framework.LimitedAccess.IsAuthenticatedOrSearchCrawler(req))
+        @if (HlidacStatu.Web.Framework.LimitedAccess.IsAuthenticatedOrSearchCrawler(req))
+        {
+            <a href="@item.GetUrl(true)">@item.EvidencniCisloZakazky</a>
+        }
+        else
+        {
+            <a href="#" data-toggle="modal" data-target="#VZInfoAnon" data-url="/zakazka/@item.Id">@item.EvidencniCisloZakazky</a>
+        }
+    </td>
+    <td>
+        @(item.PosledniZmena?.ToShortDateString())
+    </td>
+    <td>
+        @(item.LhutaDoruceni?.ToShortDateString() ?? "neuvedena")
+    </td>
+    <td>
+        @if (item.Zadavatel != null)
+        {
+            if (HlidacStatu.Util.DataValidators.CheckCZICO(item.Zadavatel.ICO))
             {
-                <a href="@item.GetUrl(true)">@item.EvidencniCisloZakazky</a>
+                <a href="https://www.hlidacstatu.cz/subjekt/@item.Zadavatel.ICO">@item.Zadavatel.Jmeno</a>
             }
             else
             {
-                <a href="#" data-toggle="modal" data-target="#VZInfoAnon" data-url="/zakazka/@item.Id">@item.EvidencniCisloZakazky</a>
+                <span>@item.Zadavatel.Jmeno</span>
             }
-        </td>
-        <td>
-            @(item.PosledniZmena?.ToShortDateString())
-        </td>
-        <td>
-            @(item.LhutaDoruceni?.ToShortDateString() ?? "neuvedena")
-        </td>
-        <td>
-            @if (item.Zadavatel != null)
+        }
+    </td>
+    <td>
+        @if (item.Dodavatele != null && item.Dodavatele.Count() > 0)
+        {
+            foreach (var d in item.Dodavatele.Take(2))
             {
-                if (HlidacStatu.Util.DataValidators.CheckCZICO(item.Zadavatel.ICO))
+                if (HlidacStatu.Util.DataValidators.CheckCZICO(d.ICO))
                 {
-                    <a href="https://www.hlidacstatu.cz/subjekt/@item.Zadavatel.ICO">@item.Zadavatel.Jmeno</a>
+                    <a href="https://www.hlidacstatu.cz/subjekt/@d.ICO">@d.Jmeno</a><br />
                 }
                 else
                 {
-                    <span>@item.Zadavatel.Jmeno</span>
+                    <span>@d.Jmeno</span><br />
                 }
+
             }
-        </td>
-        <td>
-            @if (item.Dodavatele != null && item.Dodavatele.Count() > 0)
+            @Util.IfExists(item.Dodavatele.Count() > 2, HlidacStatu.Util.PluralForm.Get(item.Dodavatele.Count() - 2, "+{0} dodavatel;+{0} další dodavatelé;+{0} dalších dodavatelů"));
+
+        }
+    </td>
+    <td>
+        @item.NazevZakazky
+    </td>
+    <td>
+        <b>
+            @if (item.KonecnaHodnotaBezDPH.HasValue)
             {
-                foreach (var d in item.Dodavatele.Take(2))
-                {
-                    if (HlidacStatu.Util.DataValidators.CheckCZICO(d.ICO))
-                    {
-                        <a href="https://www.hlidacstatu.cz/subjekt/@d.ICO">@d.Jmeno</a><br />
-                    }
-                    else
-                    {
-                        <span>@d.Jmeno</span><br />
-                    }
-
-                }
-                @Util.IfExists(item.Dodavatele.Count() > 2, HlidacStatu.Util.PluralForm.Get(item.Dodavatele.Count() - 2, "+{0} dodavatel;+{0} další dodavatelé;+{0} dalších dodavatelů"));
-
+                @Html.Raw(HlidacStatu.Util.RenderData.NicePrice(item.KonecnaHodnotaBezDPH.Value, html: true))
             }
-        </td>
-        <td>
-            @item.NazevZakazky
-        </td>
-        <td>
-            <b>
-                @if (item.KonecnaHodnotaBezDPH.HasValue)
-                {
-                    @Html.Raw(HlidacStatu.Util.RenderData.NicePrice(item.KonecnaHodnotaBezDPH.Value, html: true))
-                }
-                else if (item.OdhadovanaHodnotaBezDPH.HasValue)
-                {
-                    <span>odhad.cena </span> @Html.Raw(HlidacStatu.Util.RenderData.NicePrice(item.OdhadovanaHodnotaBezDPH.Value, html: true))
-                }
-                else
-                {
-                    <span></span>
-                }
-            </b>
-        </td>
-    </tr>
+            else if (item.OdhadovanaHodnotaBezDPH.HasValue)
+            {
+                <span>odhad.cena </span> @Html.Raw(HlidacStatu.Util.RenderData.NicePrice(item.OdhadovanaHodnotaBezDPH.Value, html: true))
+            }
+            else
+            {
+                <span></span>
+            }
+        </b>
+    </td>
+</tr>
 
 }
 
 
 @helper DotaceHead()
 {
-    <tr>
-        <th></th>
-        <th>Příjemce</th>
-        <th></th>
-        <th>IČO příjemce</th>
-        <th>Název projektu</th>
-        <th>Datum podpisu</th>
-        <th>Celková částka</th>
-    </tr>
+<tr>
+    <th></th>
+    <th>Příjemce</th>
+    <th>IČO příjemce</th>
+    <th>Název projektu</th>
+    <th>Datum podpisu</th>
+    <th>Celková částka <sup>*)</sup></th>
+</tr>
 }
 
 @helper DotaceRow(System.Security.Principal.IPrincipal user, HttpRequestBase request, HlidacStatu.Lib.Data.Dotace.Dotace item, string query = "")
 {
 <tr>
-    <td>
+    <td class="text-nowrap">
         @{
             @Util.AddBookmark(user, item)
         }
-    </td>
-    <td class="text-nowrap">
-        @(string.IsNullOrWhiteSpace(item.Prijemce.ObchodniJmeno) ?
-                    item.Prijemce.Jmeno :
-                    item.Prijemce.ObchodniJmeno)
-    </td>
-    <td class="text-nowrap">
         <a href="/dotace/detail/@item.IdDotace">Detail</a>
     </td>
     <td>
-        @if(item.Prijemce.Ico != "00000000")
-        { 
+        @Devmasters.Core.TextUtil.ShortenText((string.IsNullOrWhiteSpace(item.Prijemce.ObchodniJmeno) ?
+                            item.Prijemce.Jmeno :
+                            item.Prijemce.ObchodniJmeno)
+                    , 40)
+    </td>
+    <td>
+        @if (item.Prijemce.Ico != "00000000")
+        {
             <a href="/subjekt/@item.Prijemce.Ico" title="Informace o subjektu">@item.Prijemce.Ico</a>
         }
-</td>
+    </td>
     <td>
         @item.GetNazevDotace()
     </td>
     <td class="text-nowrap">
         @(item.DatumPodpisu?.Date.ToString("dd.MM.yyyy") ?? "Neznámé")
     </td>
-    <td class="text-nowrap text-right">
-        @if(item.DotaceCelkem == null)
+    <td class="text-right">
+        @if (item.DotaceCelkem == null)
         {
             <code><i class="fas fa-exclamation-circle"></i> Hodnota neznámá</code>
         }
@@ -497,7 +474,7 @@
                 <p class="text-muted">z toho @HlidacStatu.Util.RenderData.NicePrice((decimal)item.PujckaCelkem) je půjčka</p>
             }
         }
-        
+
     </td>
 </tr>
 }
