--- a/Web.Statu/App_Code/Util.cshtml
+++ b/Web.Statu/App_Code/Util.cshtml
@@ -458,6 +458,12 @@ smartlook('init', '344e291cbee0b3c87748a78b80faf81d6e8628b1');";
     }
 }
 
+@helper NoWrapHtml(params IHtmlString[] part)
+{
+    var s = string.Join("", part.Select(m => m.ToHtmlString().Replace("\n", "").Trim()));
+    @Html.Raw("<span style='white-space:nowrap'>" + s + "</span>")
+}
+
 @helper AddBookmark(System.Security.Principal.IPrincipal user, HlidacStatu.Lib.Data.Bookmark.IBookmarkable item, string css = "")
 {
     if (item == null)
