--- a/Web.Statu/Views/Insolvence/_SearchResult.cshtml
+++ b/Web.Statu/Views/Insolvence/_SearchResult.cshtml
@@ -39,8 +39,13 @@ else
 
 
         <div class="row">
-            <div class="col-xs-12 col-sm-6">
-                <h3>@HlidacStatu.Util.RenderData.Vysledky.NasliJsmeVysledky(Model.Result.HitsMetadata.Total, HlidacStatu.Util.RenderData.CapitalizationStyle.FirstLetterUpperCap) na výraz <span class="emphasized">@Model.Q</span></h3>
+            <div class="col-xs-12">
+                <h3>
+                    Nalezené insolvence
+                    <small>
+                        @HlidacStatu.Util.RenderData.Vysledky.PocetVysledku(Model.Result.HitsMetadata.Total, false, HlidacStatu.Util.RenderData.CapitalizationStyle.FirstLetterUpperCap)
+                    </small>
+                </h3>
 
             </div>
         </div>
@@ -84,13 +89,13 @@ else
                 @if (string.IsNullOrEmpty(firstPageClass)) //jde jit na predchozi stranku, neni to "disabled"
                 {
                     <li class="@firstPageClass">
-                        @Html.CurrentLink("« Předchozí", Model.ToRouteValues(page - 1))
+                        @Html.ActionLink("« Předchozí","hledat","insolvence", Model.ToRouteValues(page - 1),null)
                     </li>
                 }
                 @if (string.IsNullOrEmpty(lastPageClass)) //jde jit na dalsi stranku, neni to "disabled"
                 {
                     <li class="@lastPageClass">
-                        @Html.CurrentLink("Následující »", Model.ToRouteValues(page + 1))
+                        @Html.ActionLink("Následující »","hledat","insolvence", Model.ToRouteValues(page + 1),null)
                     </li>
                 }
             </ul>
