--- a/Web.Statu/App_Code/SearchResults.cshtml
+++ b/Web.Statu/App_Code/SearchResults.cshtml
@@ -267,7 +267,7 @@
     }
     if (rec.Issues != null && rec.Issues.Where(m => m.Public).Count() > 0)
     {
-        <tr class="bg@(bgLevel)">
+        <tr class="bg@(bgLevel) last">
             <td class="joined">&nbsp;</td>
             <td colspan="5" class="joined">
                 <h5>
